# image-filter

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: coverage.yml
benches/: gaussian.rs
filters/: Cargo.toml
filters/src/: box_blur_2d.comp  box_blur_2d.comp.spv  convolve.comp  convolve.comp.spv  kernel.rs  lib.rs  texture.rs
filters/src/shaders/: convolve.comp  convolve.comp.spv  convolve_clamp.comp  convolve_clamp.comp.spv
filters/tests/: box_blur.rs  gaussian_blur.rs  gaussian_blur_2d.rs  sobel.rs
src/: main.rs
src/filter/: kernel.rs
