[package]
name = "image-filter"
version = "0.1.0"
authors = ["Jason Miller <contact@jasonmiller.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = "3.0.0-beta.1"
filters = { path = "filters" }
image = "0.23.4"
futures = "0.3.5"
anyhow = "1.0.31"

[patch.crates-io]
rayon = { git = "https://github.com/rayon-rs/rayon", rev = "b5e81ef" }

[dev-dependencies]
criterion = "0.3.2"

[[bin]]
name = "image-filter"
path = "src/main.rs"
bench = false

[[bench]]
name = "gaussian"
harness = false

