[package]
name = "filters"
version = "0.1.0"
authors = ["Jason Miller <contact@jasonmiller.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
approx = "0.3.2"
ndarray = "0.13.1"
itertools = "0.9.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "554327a3d5bf596c9ca9514db5522287e69b9c18" }
png = "0.16.4"
bytemuck = "1.2.0"
image = "0.23.4"
